# degen_tracker

./: .gitignore  README.md  pyproject.toml
degen_webapp/: README.md  package-lock.json
degen_webapp/pages/: index.js
degen_webapp/pages/api/: data.js  index.js
prototypes/: fetch_erc20_hypersync_raw.py  fetch_wallet_balance_WIP.py  full_sync_parquet_hypersync_slow.py  update_lance_raw.py
src/degen_tracker/: __init__.py  hypersync.py  lance.py  metrics.py
test/: fetch_erc20.py  full_sync.py  lancedb.ipynb  monitor_db.ipynb  partial_sync_stream_db.py  resume_sync.py  sample_init_data_lance.py  sample_stream_db.py  start_lance.py  start_sync.py  stream_db.py  stream_metrics.py
