[project]
name = "degen-tracker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Evan K", email = "ekcopersonal@gmail.com" }
]
dependencies = [
    "polars>=0.20.19",
    "hypersync>=0.5.7",
    "hvplot>=0.9.2",
    "ipykernel>=6.29.4",
    "nest_asyncio>=1.6.0",
    "lancedb>=0.6.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/degen_tracker"]
